force-app/main/default/objects/Compliance_Rules__mdt/Compliance_Rules__mdt.object-meta.xml
<CustomObject>
    <label>Compliance Rules</label>
    <pluralLabel>Compliance Rules</pluralLabel>
</CustomObject>