force-app/main/default/objects/Compliance_Rules__mdt/fields/Hours_Per_Instructional_Day__c.field-meta.xml
<CustomField>
    <fullName>Hours_Per_Instructional_Day__c</fullName>
    <label>Hours Per Instructional Day</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>