force-app/main/default/objects/Compliance_Rules__mdt/fields/Min_Instructional_Days_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Min_Instructional_Days_Per_Year__c</fullName>
    <label>Min Instructional Days Per Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>