force-app/main/default/objects/Compliance_Rules__mdt/fields/Tier2_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Tier2_Threshold__c</fullName>
    <label>Tier 2 Threshold</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>